@@ -1,3 +1,6 @@
+20130819 - fhabermann
+* show inverse members in memberpanel
+
 20130818 - fhabermann
 * added memberpanel to group edit
 
